--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.1.0",
+    "lucide-react": "^0.474.0",
     "notiflix": "^3.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-transition-group": "^4.4.2",
